<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_tvs"
            android:id="@+id/logo_text"
            android:textSize="@dimen/logo_text"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"/>

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/half_fab">

            <EditText android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/username_hint"
                android:autofillHints="@string/username_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_fab"
            android:layout_marginBottom="@dimen/half_fab">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:autofillHints="@string/password_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_btn"
            android:layout_marginBottom="@dimen/login_btn"
            android:background="@drawable/login_button"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic"
            android:onClick="login"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/btn_login"/>

    </LinearLayout>
</ScrollView>